force-app/main/default/objects/PDLM__Approval_Criteria__c/PDLM__Approval_Criteria__c.object-meta.xml
<CustomObject>
    <label>Approval Criteria</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Approval Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>