force-app/main/default/objects/PDLM__Approval_Criteria__c/fields/PDLM__API_3__c.field-meta.xml
<CustomField>
    <fullName>PDLM__API_3__c</fullName>
    <label>API Field Name 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>