force-app/main/default/objects/PDLM__Approval_Criteria__c/fields/PDLM__Custom_Logic__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Custom_Logic__c</fullName>
    <label>Custom Logic</label>
    <length>225</length>
    <type>Text</type>
</CustomField>