force-app/main/default/objects/PDLM__Approval_Criteria__c/fields/PDLM__Follower_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Follower_Group_Name__c</fullName>
    <description>Public group (api name) containing the users who will follow workflow objects matching this approver criteria</description>
    <label>Follower Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>