force-app/main/default/objects/PDLM__Approval_Criteria__c/fields/PDLM__Group_Label__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Group_Label__c</fullName>
    <description>Filled in when the User Field is populated, may be empty</description>
    <label>User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>