force-app/main/default/objects/PDLM__Approval_Criteria__c/fields/PDLM__User_Field__c.field-meta.xml
<CustomField>
    <fullName>PDLM__User_Field__c</fullName>
    <description>set if this record specifies a user from one of the fields on the workflow object</description>
    <label>User Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>