force-app/main/default/objects/PDLM__Approval_Criteria__c/fields/PDLM__Value_2__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Value_2__c</fullName>
    <label>Value 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>