force-app/main/default/objects/PDLM__Approval_Criteria__c/listViews/PDLM__All.listView-meta.xml
<ListView>
    <fullName>PDLM__All</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Description__c</columns>
    <columns>PDLM__Category__c</columns>
    <columns>PDLM__Phase__c</columns>
    <columns>PDLM__Group_Label__c</columns>
    <columns>PDLM__Auto_Apply_CBA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>